db problems fixed, more covers added, click to edit removed

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -430,8 +430,10 @@ button {
         button{
             margin-right: 5px;
         }
+        display: none; 
     }
     .signout-buttons{
+        display: none;
         margin: 10px 0px;
     }
     .username{
